Add latest samples of Autoencoder Attention model

--- a/templates/vote.html
+++ b/templates/vote.html
@@ -19,7 +19,7 @@
     <div id="particles-js"></div>
 
     <div class="text text-center">
-        <h2 style="display: inline">With your help you will make our </h2>
+        <h2 style="display: inline">Your help will make our </h2>
         <h1 style="display: inline; color: #5382CA;">AI</h1> <h2 style="display: inline">  even smarter!</h2>
         <br><br>
         <div class = "block">
