--- a/templates/form.html
+++ b/templates/form.html
@@ -18,10 +18,10 @@
 <body style = "background-color: #1F2439">
 
   	<div id="particles-js"></div>
-	<div class="text text-center">
+	<div class="text text-center" style="min-width: 500px;">
     	<h1 style="display: inline; color: #5382CA;">AI</h1> <h2 style="display: inline">Melodies Composer</h2>
     	<br><br>
-    	<div class = "block">
+    	<div class = "block" style="min-width: 500px;">
     		<h4>Step 1: Choose your Model's Hyperparameters</h4>
 			<div class="toggle_radio">
 				<input type="radio" class="toggle_option" id="first_toggle" name="toggle_option"  value="F" 
