Fix some console log

--- a/templates/vote.html
+++ b/templates/vote.html
@@ -18,7 +18,7 @@
 <body style = "background-color: #1F2439;" >
     <div id="particles-js"></div>
 
-    <div class="text text-center" style="min-width: 600px;">
+    <div id = "content" class="text text-center" style="min-width: 600px;">
         <h2 style="display: inline">Your help will make our </h2>
         <h1 style="display: inline; color: #5382CA;">AI</h1> <h2 style="display: inline">  even smarter!</h2>
         <br><br>
@@ -215,7 +215,7 @@
         Your browser does not support the audio element.
     </audio> 
     <audio id = "real_melodie" controls loop style="display: none;">
-        <source src="{{ url_for('static', filename='samples/real_melodie.mp3')}}" type="audio/mpeg">
+        <source src="{{ url_for('static', filename='samples/RG_714710.mp3')}}" type="audio/mpeg">
         Your browser does not support the audio element.
     </audio> 
     <audio id = "fake_melodie" controls loop style="display: none;">
