Fixing some issues on mobile version

--- a/templates/vote.html
+++ b/templates/vote.html
@@ -3,7 +3,7 @@
 <html xmlns = "http://www.w3.org/1999/xhtml">
 <head>
     <title>AI Melodies Composer</title>
-
+    <meta name="viewport" content="width=1060px, maximum-scale=0.5" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -15,14 +15,16 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='css/toggle.css') }}">
 </head>
 
-<body style = "background-color: #1F2439;" >
+<body style = "background-color: #1F2439; overflow-y: scroll;" >
     <div id="particles-js"></div>
 
-    <div id = "content" class="text text-center" style="min-width: 600px;">
+    <div class="text text-center" style="min-width: 500px; min-height: 300px">
+        <div id = "title">
         <h2 style="display: inline">Your help will make our </h2>
         <h1 style="display: inline; color: #5382CA;">AI</h1> <h2 style="display: inline">  even smarter!</h2>
-        <br><br>
-        <div class = "block" style="min-width: 400px;">
+        </div>
+        <br>
+        <div class = "block text-center" style="min-width: 500px;">
         <h3>Just Listen and answer the questions</h3>
         
         <button type="button" class = 'btn-sm-block' onclick="playbtn()">
@@ -118,7 +120,7 @@
                     <h4>
                         Για να μπορέσουμε να αξιολογήσουμε τα αποτελέσματα των μοντέλων και για να μπορέσουμε να 
                         καταλάβουμε τις διαφορές και τις αδυναμίες του κάθε ενός χρειαζόμαστε την βοήθειά σου! 
-                        Κάθε μελωδία που παίζεται είναι τυχαία επιλεγμένη από διαφορετικά μοντέλα, με διαφορετικούς παραμέτρους, με διαφορετικά σύνολα εκπαίδευσης και διαφορετικές αρχικές ακολουθίες. Παρόλα αυτά ανάμεσα στα κομμάτια που θα ακούσεις υπάρχουν και πραγματικές μελωδίες και κάθε φορά η μελωδία που παίζεται μπορεί να είναι είτε πραγματική είτε κατασκευασμένη από υπολογιστή.
+                        Κάθε μελωδία που παίζεται είναι τυχαία επιλεγμένη από διαφορετικά μοντέλα, με διαφορετικούς παραμέτρους, με διαφορετικά σύνολα εκπαίδευσης και διαφορετικές αρχικές ακολουθίες. Παρόλα αυτά ανάμεσα στα κομμάτια που θα ακούσεις υπάρχουν και πραγματικές μελωδίες και κάθε φορά η μελωδία που παίζεται μπορεί να είναι είτε πραγματική είτε κατασκευασμένη από υπολογιστή. Η αρχική μελωδία είναι κοινή για κάθε μοντέλο και το μόνο που αλλάζει είναι το πως κάθε ένα από αυτά συνεχίζει την συνθεσή της. Συνεπώς μπορεί ορισμένα κομμάτια στην αρχή να ξεκινούν με τον ίδιο τρόπο αλλα η συνεχεία τους θα είναι σίγουρα διαφορετική.
                         <br><br>
                     </h4>
 
@@ -148,7 +150,7 @@
                     <h4>
                         Αξίζει να σημειωθεί ότι το σύστημα αυτό συνθέτει την μελωδία σαν μια ακολουθία νοτών και δεν παράγει απευθείας audio αρχεία. Αυτό σημαίνει ότι για την αναπαραγωγή των αρχείων εμπλέκονται και ορισμένοι εξωγενείς παράγοντες όπως το ποιο σύστημα θα αναλάβει την αναπαραγωγή της μελωδίας, από ποιο ακριβώς όργανο έχει καταγράψει την κάθε νότα κ.α. Αυτό σημαίνει ότι το ίδιο μουσικό κομμάτι μπορεί να ακούγεται διαφορετικά από εδώ και διαφορετικά αν παίζεται από ένα άλλο πρόγραμμά αναπαραγωγής (π.χ. Windows Player)
                         Επίσης κατά την αποκωδικοποίηση των πραγματικών μελωδιών ορισμένη πληροφορία θυσιαστικέ με σκοπό το σύστημα μας κάθε φορά να επικεντρώνεται στα σημαντικά κομμάτια της μουσικής πληροφορίας. 
-                        <br><br>Για παράδειγμα έτσι ακούγεται μια πραγματική μελωδία (Beethoven fur elise) όπως την βλέπει το σύστημα μας.
+                        <br><br>Για παράδειγμα έτσι ακούγεται μια πραγματική μελωδία όπως την βλέπει το σύστημα μας.
 
                     </h4>
 
@@ -183,7 +185,7 @@
         
                 <!-- Modal body -->
                 <div class="modal-body">
-                    <h4>Αυτό που πρέπει να κάνεις σε αυτό το σημείο είναι απλά να ακούσεις τα διάφορα κομμάτια (πατώντας το play button) και αφού ακούσεις για το κάθε ένα να απαντήσεις στο αν πιστεύεις ότι η μελωδία αυτή είναι πραγματική, πόσο αυτή σου αρέσει αυτή και κατά πόσο την βρήκες ενδιαφέρουσα.
+                    <h4>Αυτό που πρέπει να κάνεις σε αυτό το σημείο είναι απλά να ακούσεις τα διάφορα κομμάτια (πατώντας το play button) και αφού ακούσεις για το κάθε ένα να απαντήσεις στο αν πιστεύεις ότι η μελωδία αυτή είναι πραγματική, πόσο αυτή σου αρέσει αυτή και κατά πόσο την βρήκες ενδιαφέρουσα. 
                     <br><br>Τελός κάθε στιγμή μπορείς να σταματήσεις την διαδικασία αξιολόγησης απλά πηγαίνοντας στην προηγούμνη σελίδα 
                     και να πειραματιστείς με τα αποτελέσματα των μοντέλων. Έστω και μια αξιολόγηση είναι σημαντική!</h4>
                     <br>
@@ -240,6 +242,10 @@
 
 
     window.onload = function () {
+        if (screen.width < 800) {
+            document.getElementById("title").style.paddingLeft = "85px";
+            document.getElementById("content").style.paddingLeft = "85px";
+        }
         $('#myModal').modal('show'); 
         $("#next").prop('disabled', true); 
         $.ajax({
