Fix text issues

--- a/templates/form.html
+++ b/templates/form.html
@@ -166,6 +166,7 @@ window.onload = function () {
 	if (screen.width < 800) {
             document.getElementById("title").style.paddingLeft = "85px";
             document.getElementById("content").style.paddingLeft = "85px";
+            document.getElementByClassName("block").style.borderRadius = "0px";
     }
 	$.ajax({
         data : {
