--- a/templates/vote.html
+++ b/templates/vote.html
@@ -118,9 +118,10 @@
                 <!-- Modal body -->
                 <div class="modal-body">
                     <h4>
-                        Για να μπορέσουμε να αξιολογήσουμε τα αποτελέσματα των μοντέλων και για να μπορέσουμε να 
-                        καταλάβουμε τις διαφορές και τις αδυναμίες του κάθε ενός χρειαζόμαστε την βοήθειά σου! 
-                        Κάθε μελωδία που παίζεται είναι τυχαία επιλεγμένη από διαφορετικά μοντέλα, με διαφορετικούς παραμέτρους, με διαφορετικά σύνολα εκπαίδευσης και διαφορετικές αρχικές ακολουθίες. Παρόλα αυτά ανάμεσα στα κομμάτια που θα ακούσεις υπάρχουν και πραγματικές μελωδίες και κάθε φορά η μελωδία που παίζεται μπορεί να είναι είτε πραγματική είτε κατασκευασμένη από υπολογιστή. Η αρχική μελωδία είναι κοινή για κάθε μοντέλο και το μόνο που αλλάζει είναι το πως κάθε ένα από αυτά συνεχίζει την συνθεσή της. Συνεπώς μπορεί ορισμένα κομμάτια στην αρχή να ξεκινούν με τον ίδιο τρόπο αλλα η συνεχεία τους θα είναι σίγουρα διαφορετική.
+                        Καλώς όρισες  στην σελίδα αξιολόγησης των μοντέλων τεχνιτής νοημοσύνης, τα όποια έχουν κατασκευαστεί με σκοπό τη  αυτόματη σύνθεση μελωδιών.
+
+                        Στην συνέχεια θα ακούσεις διάφορα κομμάτια όπου το κάθε ένα από αυτά είναι τυχαία επιλεγμένο από διαφορετικό μοντέλο, με διαφορετικούς παραμέτρους, με διαφορετικά σύνολα εκπαίδευσης και διαφορετικές αρχικές ακολουθίες. Παρόλα αυτά ανάμεσα στα κομμάτια που θα ακούσεις υπάρχουν και πραγματικές μελωδίες και κάθε φορά η μελωδία που παίζεται μπορεί να είναι είτε πραγματική είτε κατασκευασμένη από υπολογιστή.
+                        Αξίζει να σημειωθεί οτι η αρχική μελωδία είναι κοινή για κάθε μοντέλο και το μόνο που αλλάζει είναι το πως κάθε ένα από αυτά συνεχίζει την συνθεσή της. Συνεπώς μπορεί ορισμένα κομμάτια στην αρχή να ξεκινούν με τον ίδιο τρόπο αλλα η συνεχεία τους θα είναι σίγουρα διαφορετική.
                         <br><br>
                     </h4>
 
@@ -148,8 +149,8 @@
                 <!-- Modal body -->
                 <div class="modal-body">
                     <h4>
-                        Αξίζει να σημειωθεί ότι το σύστημα αυτό συνθέτει την μελωδία σαν μια ακολουθία νοτών και δεν παράγει απευθείας audio αρχεία. Αυτό σημαίνει ότι για την αναπαραγωγή των αρχείων εμπλέκονται και ορισμένοι εξωγενείς παράγοντες όπως το ποιο σύστημα θα αναλάβει την αναπαραγωγή της μελωδίας, από ποιο ακριβώς όργανο έχει καταγράψει την κάθε νότα κ.α. Αυτό σημαίνει ότι το ίδιο μουσικό κομμάτι μπορεί να ακούγεται διαφορετικά από εδώ και διαφορετικά αν παίζεται από ένα άλλο πρόγραμμά αναπαραγωγής (π.χ. Windows Player)
-                        Επίσης κατά την αποκωδικοποίηση των πραγματικών μελωδιών ορισμένη πληροφορία θυσιαστικέ με σκοπό το σύστημα μας κάθε φορά να επικεντρώνεται στα σημαντικά κομμάτια της μουσικής πληροφορίας. 
+                        Κάθε ένα από τα μοντέλα αυτά συνθέτουν την μελωδία σαν μια ακολουθία νοτών (midi format) και δεν παράγουν απευθείας audio αρχεία. Αυτό σημαίνει ότι για την αναπαραγωγή των κομματιών εμπλέκονται και ορισμένοι εξωγενείς παράγοντες όπως το ποιο πρόγραμμα θα αναλάβει την αναπαραγωγή της μελωδίας, από ποιο ακριβώς όργανο έχει καταγράψει την κάθε νότα κ.α. Αυτό σημαίνει ότι το ίδιο μουσικό κομμάτι μπορεί να ακούγεται διαφορετικά από εδώ και διαφορετικά αν παίζεται από ένα άλλο πρόγραμμά αναπαραγωγής (π.χ. Windows Player)
+                        Επίσης κατά την αποκωδικοποίηση των πραγματικών μελωδιών ορισμένη πληροφορία θυσιαστικέ με σκοπό το σύστημα μας κάθε φορά να επικεντρώνεται στα σημαντικά κομμάτια της μουσικής πληροφορίας.
                         <br><br>Για παράδειγμα έτσι ακούγεται μια πραγματική μελωδία όπως την βλέπει το σύστημα μας.
 
                     </h4>
@@ -157,11 +158,12 @@
                     <button type="button" class = 'center-block' onclick = 'play_helper1()'>
                         <img id = 'play_btn_real' src="{{ url_for('static', filename='images/playb.png') }}" alt="Play Button"  height="30" width="30">
                     </button>
-                    <h4>Ενώ έτσι ακούγεται ένα κομμάτι που έχει συντεθει από υπολογιστή.</h4>
+                    <h4>Έτσι ακούγεται μια μελωδία η οποιά έχει συντεθεί από ένα από τα μοντέλα μας.</h4>
                     <button type="button" class = 'center-block' onclick = 'play_helper2()'>
                         <img id = 'play_btn_fake' src="{{ url_for('static', filename='images/playb.png') }}" alt="Play Button"  height="30" width="30">
                     </button>
                     <br>
+                     <h4><center> Πιστευείς οτι μπορείς να καταλάβεις την διαφορα?</center></h4>
                     <div style="text-align: center;">
                         <button type="button" class="btn btn-default" onclick = "next1()">Επόμενο
                              <span class="glyphicon glyphicon-menu-right"></span>
@@ -245,6 +247,7 @@
         if (screen.width < 800) {
             document.getElementById("title").style.paddingLeft = "85px";
             document.getElementById("content").style.paddingLeft = "85px";
+            document.getElementByClassName("block").style.borderRadius = "0px";
         }
         $('#myModal').modal('show'); 
         $("#next").prop('disabled', true); 
