--- a/templates/form.html
+++ b/templates/form.html
@@ -3,7 +3,6 @@
 <html xmlns = "http://www.w3.org/1999/xhtml">
 <head>
     <title>AI Melodies Composer</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -11,19 +10,19 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/particles.css') }}">
+    <link rel="stylesheet" media='screen' href="{{ url_for('static', filename='css/particles.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/toggle.css') }}">
 </head>
 
-<body style = "background-color: #1F2439">
+<body style = "background-color: #1F2439;">
 
   	<div id="particles-js"></div>
-	<div class="text text-center" style="min-width: 490px; min-height: 500px">
+	<div class="text text-center" style="min-width: 700px;">
 		<div id = "title">
     	<h1 style="display: inline; color: #5382CA;">AI</h1> <h2 style="display: inline">Melodies Composer</h2>
     	</div>
     	<br>
-    	<div class = "block" style="min-width: 500px;">
+    	<div class = "block text-center" style="min-width: 385px;">
     		<h4>Step 1: Choose your Model's Hyperparameters</h4>
 			<div class="toggle_radio">
 				<input type="radio" class="toggle_option" id="first_toggle" name="toggle_option"  value="F" 
@@ -163,11 +162,6 @@ var files = [];
 var source = 'static/samples/AGIG256_294592_1.3616.mp3';
 
 window.onload = function () {
-	if (screen.width < 800) {
-            document.getElementById("title").style.paddingLeft = "85px";
-            document.getElementById("content").style.paddingLeft = "85px";
-            document.getElementByClassName("block").style.borderRadius = "0px";
-    }
 	$.ajax({
         data : {
         	// network : $("input[name='model']:checked").val(),
